[package]
name = "worldclock"
version = "0.1.0"
authors = ["Janosch Gräf <janosch@nimiq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.6"
toml = "0.5"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.5"
structopt = "0.3"
anyhow = "1.0"
dirs = "3.0"
prettytable-rs = "0.8"
